Desktop Layout Outline + Hero Image

--- a/index.html
+++ b/index.html
@@ -19,21 +19,121 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Genrics -->
-  <link rel="stylesheet" href="/styles/generic.css">
+  <link rel="stylesheet" href="/styles/generics.css">
 
   <!-- Local styles -->
   <link rel="stylesheet" href="/styles/styles.css">
+
+  <!-- Local Script -->
+  <script src="./app.js" defer></script>
 
 </head>
 
 <body>
 
-  <!-- Start Contact Banner -->
-  <div class="contact-banner">
-    <div><a href="tel:07723474069">07723474069</a></div>
-    <div><a href="mailto:amanda@skylarkfarmadvice.co.uk">amanda@skylarkfarmadvice.co.uk</a></div>
+  <div class="page-wrapper">
+
+    <!-- Start Contact Banner -->
+    <div class="contact-banner flex-center">
+      <div><a href="tel:07723474069">07723474069</a></div>
+      <div><a href="mailto:amanda@skylarkfarmadvice.co.uk">amanda@skylarkfarmadvice.co.uk</a></div>
+    </div>
+    <!-- End Contact Banner -->
+
+
+    <!-- Header Starts Here -->
+    <header>
+      <nav class="navbar-wrapper">
+
+        <div class="navbar flex-center">
+
+          <div> <a href="https://skylarkfarmadvice.co.uk/"><img src="/assets/logos/SkylarkFA Logo_grn.svg" alt="logo"
+                class="logo"></a>
+          </div>
+
+          <div class="nav-icon">
+            <!-- <i class="fa-solid fa-bars"></i> -->
+            <div class="menu-btn">
+              <div class="menuIcon line1"></div>
+              <div class="menuIcon line2"></div>
+              <div class="menuIcon line3"></div>
+            </div>
+          </div>
+
+          <div class="nav-items flex-center">
+            <ul class="nav-display">
+              <!-- <li> <a href="#">Home</a> </li> -->
+              <li> <a href="#">About</a> </li>
+              <li> <a href="#">Services</a> </li>
+              <li> <a href="#">Case Studies</a> </li>
+            </ul>
+          </div>
+
+        </div>
+
+      </nav>
+    </header>
+    <!-- Header Ends Here -->
+
+
+    <!-- Hero Section Starts Here -->
+    <section class="hero-wrapper">
+
+      <div class="hero-main">
+        <img class="hero-image" src="/assets/images/grainTractor.jpeg" alt="grain tractor harvesting wheat">
+        <div class="hero-overlay">
+          <div class="hero-title">
+            <div>Independent Farm 
+              <div>Advice Service</div>
+          </div>
+        </div>
+        </div>
+
+      </div>
+
+
+
+    </section>
+    <!-- Hero Section End Here -->
+
+
+    <!-- About Section Starts Here -->
+    <section class="about-wrapper"></section>
+    <!-- About Section Ends Here -->
+
+
+    <!-- Services Section Starts Here -->
+    <section class="services-wrapper"></section>
+    <!-- Services Section Ends Here -->
+
+    <!-- Case Studies Section Starts Here -->
+    <section class="case-studies-wrapper"></section>
+    <!-- Case Studies Section Ends Here -->
+
+
+    <!-- Footer Starts Here -->
+    <footer class="footer">
+      <div class="social-links">
+        <ul>
+
+          <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
+
+          <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
+
+          <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
+
+        </ul>
+      </div>
+
+      <!-- Copyright -->
+      <div class="copyright">
+        <p>&copy; <span id="date"></span></p>
+        <p>Skylark Farm Advice</p>
+
+    </footer>
+
+
   </div>
-  <!-- End Contact Banner -->
 
 </body>
 
