--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
 <body>
 
+
+
+
   <div class="page-wrapper">
 
     <!-- Start Contact Banner -->
@@ -39,7 +42,6 @@
       <div><a href="mailto:amanda@skylarkfarmadvice.co.uk">amanda@skylarkfarmadvice.co.uk</a></div>
     </div>
     <!-- End Contact Banner -->
-
 
     <!-- Header Starts Here -->
     <header>
@@ -60,7 +62,7 @@
             </div>
           </div>
 
-          <div class="nav-items flex-center">
+          <div class="nav-items flex-center hidden">
             <ul class="nav-display">
               <!-- <li> <a href="#">Home</a> </li> -->
               <li> <a href="#">About</a> </li>
@@ -80,13 +82,13 @@
     <section class="hero-wrapper">
 
       <div class="hero-main">
-        <img class="hero-image" src="/assets/images/grainTractor.jpeg" alt="grain tractor harvesting wheat">
+        <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg" alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
-            <div>Independent Farm 
+            <div>Independent Farm
               <div>Advice Service</div>
+            </div>
           </div>
-        </div>
         </div>
 
       </div>
