mobile nav function

--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
                 class="logo"></a>
           </div>
 
-          <div class="nav-icon">
-            <!-- <i class="fa-solid fa-bars"></i> -->
-            <div class="menu-btn">
-              <div class="menuIcon line1"></div>
-              <div class="menuIcon line2"></div>
-              <div class="menuIcon line3"></div>
-            </div>
+          <!-- <div class="nav-icon"> -->
+          <!-- <i class="fa-solid fa-bars"></i> -->
+          <div class="menu-btn">
+            <div class="menuIcon line1"></div>
+            <div class="menuIcon line2"></div>
+            <div class="menuIcon line3"></div>
           </div>
+          <!-- </div> -->
 
-          <div class="nav-items flex-center hidden">
+          <div class="nav-items">
             <ul class="nav-display">
               <!-- <li> <a href="#">Home</a> </li> -->
-              <li> <a href="#">About</a> </li>
-              <li> <a href="#">Services</a> </li>
-              <li> <a href="#">Case Studies</a> </li>
+              <li> <a href="#about">About</a> </li>
+              <li> <a href="#services">Services</a> </li>
+              <li> <a href="#case-studies">Case Studies</a> </li>
             </ul>
           </div>
 
@@ -82,7 +82,8 @@
     <section class="hero-wrapper">
 
       <div class="hero-main">
-        <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg" alt="grain tractor harvesting wheat">
+        <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg"
+          alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
             <div>Independent Farm
@@ -100,21 +101,21 @@
 
 
     <!-- About Section Starts Here -->
-    <section class="about-wrapper"></section>
+    <section class="about-wrapper" id="about"></section>
     <!-- About Section Ends Here -->
 
 
     <!-- Services Section Starts Here -->
-    <section class="services-wrapper"></section>
+    <section class="services-wrapper" id="services"></section>
     <!-- Services Section Ends Here -->
 
     <!-- Case Studies Section Starts Here -->
-    <section class="case-studies-wrapper"></section>
+    <section class="case-studies-wrapper" id="case-studies"></section>
     <!-- Case Studies Section Ends Here -->
 
 
     <!-- Footer Starts Here -->
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="social-links">
         <ul>
 
@@ -131,7 +132,7 @@
       <div class="copyright">
         <p>&copy; <span id="date"></span></p>
         <p>Skylark Farm Advice</p>
-
+      </div>
     </footer>
 
 
