About + Services sections added

--- a/index.html
+++ b/index.html
@@ -101,16 +101,52 @@
 
 
     <!-- About Section Starts Here -->
-    <section class="about-wrapper" id="about"></section>
+    <section class="about-wrapper" id="about">
+      <h2 class="section-title">About Skylark</h2>
+      <p class="about-description">We specialise in working with farmers to maximise the environmental potential of their land while supporting the farm business.</p>
+
+      <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and training and assurance schemes.</p>
+
+      <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as delivery of independent grant schemes and partnership projects.</p>
+
+    </section>
     <!-- About Section Ends Here -->
 
 
     <!-- Services Section Starts Here -->
-    <section class="services-wrapper" id="services"></section>
+    <section class="services-wrapper" id="services">
+      <h2 class="section-title">How can we help you?</h2>
+
+      <div class="services-card">
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <h3>Countryside Stewardship</h3>
+        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+      </div>
+
+      <div class="services-card">
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <h3>Soil Management</h3>
+        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+      </div>
+
+      <div class="services-card">
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <h3>Farm Advice Training and
+          Workshops</h3>
+        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+      </div>
+
+      <div class="services-card">
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <h3>Countryside Stewardship</h3>
+        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+      </div>
+
+    </section>
     <!-- Services Section Ends Here -->
 
     <!-- Case Studies Section Starts Here -->
-    <section class="case-studies-wrapper" id="case-studies"></section>
+    <!-- <section class="case-studies-wrapper" id="case-studies"></section> -->
     <!-- Case Studies Section Ends Here -->
 
 
