--- a/index.html
+++ b/index.html
@@ -103,11 +103,19 @@
     <!-- About Section Starts Here -->
     <section class="about-wrapper" id="about">
       <h2 class="section-title">About Skylark</h2>
-      <p class="about-description">We specialise in working with farmers to maximise the environmental potential of their land while supporting the farm business.</p>
+      <p class="about-description">We specialise in working with farmers to <span class="text-highlight">maximise</span>
+        the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
+        business.</p>
 
-      <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and training and assurance schemes.</p>
+      <p>Offering a range of services including including countryside stewardship; habitat and species surveys, and
+        advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
+        training and assurance schemes.</p>
 
-      <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as delivery of independent grant schemes and partnership projects.</p>
+      <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology
+        and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding
+        certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has
+        over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as
+        delivery of independent grant schemes and partnership projects.</p>
 
     </section>
     <!-- About Section Ends Here -->
@@ -120,26 +128,67 @@
       <div class="services-card">
         <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Countryside Stewardship</h3>
-        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+        <h4>Pre-entry Countryside Stewardship Farm Review</h4>
+        <p>An initial visit to your farm to discuss the Countryside
+          Stewardship scheme requirements, priorities for your area and to identify potential options that you may like
+          to consider in your application. A short report will be produced to help inform your future application.</p>
+
+        <h4> Mid Tier, Higher Tier and Capital Grant Applications</h4>
+        <p>With over 10 years in undertaking successful
+          agri-environment scheme applications, Amanda will work with you to design an application that meets the
+          priorities for the area. Maximising your chances of a successful agreement, while working with the
+          requirements of your farm business.</p>
+
+        <h4>Application Check </h4>
+        <p>If you prefer to carry out your own application we provide an application check service, ensuring the forms
+          have been completed as required and advising on whether the options chosen fit with the
+          Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+
+        <h4>Stewardship Scheme MOT</h4>
+        <p>Helping you to ensure you are meeting the requirements of your ELS, OELS, HLS or Countryside Stewardship
+          scheme. Providing reassurance on compliance with the regulatory requirements together
+          with advice on how to maximise the environmental benefits of your scheme.</p>
+      </div>
+
+      <div class="services-card">
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <h3>Access to support schemes</h3>
+        <p>A wide variety of grants are now available to farmers in order to help support environmental management.</p>
+
+        <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
+          Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+
+        <p>With over 10 years experience in undertaking successful agri-environment scheme applications as well
+          as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes, Amanda
+          can advise you on funding opportunities available, help you to decide what is right for your farm and assist
+          from application to delivery.
+        </p>
       </div>
 
       <div class="services-card">
         <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Soil Management</h3>
-        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
+        <h4>Soil Management Plans</h4>
+        <p>Provide advice on diffuse pollution and resource protection including the soil management requirements under
+          Cross Compliance.</p>
       </div>
 
       <div class="services-card">
         <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Farm Advice Training and
           Workshops</h3>
-        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
-      </div>
+        <p>Experienced in arranging and delivering training and workshops on a range of topics.</p>
+        <p>Recent events have included:</p>
+        <ul>
+          <li>hedgerow management</li>
+          <li>soil management</li>
+          <li>NVZ and Cross Compliance update</li>
+          <li>biobeds</li>
+          <li>equine management</li>
+          <li>farm pollinators</li>
+          <li>slug control</li>
+        </ul>
 
-      <div class="services-card">
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
-        <h3>Countryside Stewardship</h3>
-        <p>Pre-entry Countryside Stewardship Farm Review - An initial visit to your farm to discuss the Countryside Stewardship scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.</p>
       </div>
 
     </section>
