--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <div class="nav-items">
             <ul class="nav-display">
               <!-- <li> <a href="#">Home</a> </li> -->
-              <li> <a href="#about">About</a> </li>
-              <li> <a href="#services">Services</a> </li>
-              <li> <a href="#case-studies">Case Studies</a> </li>
+              <li> <a class="nav-link" href="#about">About</a> </li>
+              <li> <a class="nav-link" href="#services">Services</a> </li>
+              <li> <a class="nav-link" href="#case-studies">Case Studies</a> </li>
             </ul>
           </div>
 
