--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <!-- <li> <a href="#">Home</a> </li> -->
               <li> <a class="nav-link" href="#about">About</a> </li>
               <li> <a class="nav-link" href="#services">Services</a> </li>
-              <li> <a class="nav-link" href="#case-studies">Case Studies</a> </li>
+              <li> <a class="nav-link" href="#get-in-touch">Get in touch </a> </li>
             </ul>
           </div>
 
@@ -126,33 +126,58 @@
       <h2 class="section-title">How can we help you?</h2>
 
       <div class="services-card">
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Countryside Stewardship</h3>
-        <h4>Pre-entry Countryside Stewardship Farm Review</h4>
-        <p>An initial visit to your farm to discuss the Countryside
-          Stewardship scheme requirements, priorities for your area and to identify potential options that you may like
-          to consider in your application. A short report will be produced to help inform your future application.</p>
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
 
-        <h4> Mid Tier, Higher Tier and Capital Grant Applications</h4>
-        <p>With over 10 years in undertaking successful
-          agri-environment scheme applications, Amanda will work with you to design an application that meets the
-          priorities for the area. Maximising your chances of a successful agreement, while working with the
-          requirements of your farm business.</p>
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-heading">Pre-entry Countryside Stewardship Farm Review</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
+            Stewardship scheme requirements, priorities for your area and to identify potential options that you may
+            like
+            to consider in your application. A short report will be produced to help inform your future application.</p>
+        </div>
 
-        <h4>Application Check </h4>
-        <p>If you prefer to carry out your own application we provide an application check service, ensuring the forms
-          have been completed as required and advising on whether the options chosen fit with the
-          Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
 
-        <h4>Stewardship Scheme MOT</h4>
-        <p>Helping you to ensure you are meeting the requirements of your ELS, OELS, HLS or Countryside Stewardship
-          scheme. Providing reassurance on compliance with the regulatory requirements together
-          with advice on how to maximise the environmental benefits of your scheme.</p>
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-heading">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">With over 10 years in undertaking successful
+            agri-environment scheme applications, Amanda will work with you to design an application that meets the
+            priorities for the area. Maximising your chances of a successful agreement, while working with the
+            requirements of your farm business.</p>
+        </div>
+
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-heading"> Application Check </h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">If you prefer to carry out your own application we provide an application
+            check service, ensuring the forms
+            have been completed as required and advising on whether the options chosen fit with the
+            Countryside Stewardship priorities for the area, maximising your chances of a successful application.</p>
+        </div>
+
+        <div class="stewardship-options">
+          <div class="stewardship-title">
+            <h4 class="stewardship-heading">Stewardship Scheme MOT</h4>
+            <h4 class="stewardship-btn">+</h4>
+          </div>
+          <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
+            HLS or Countryside Stewardship
+            scheme. Providing reassurance on compliance with the regulatory requirements together
+            with advice on how to maximise the environmental benefits of your scheme.</p>
+        </div>
       </div>
 
       <div class="services-card">
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Access to support schemes</h3>
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <p>A wide variety of grants are now available to farmers in order to help support environmental management.</p>
 
         <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
@@ -166,17 +191,17 @@
       </div>
 
       <div class="services-card">
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Soil Management</h3>
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h4>Soil Management Plans</h4>
         <p>Provide advice on diffuse pollution and resource protection including the soil management requirements under
           Cross Compliance.</p>
       </div>
 
       <div class="services-card">
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <h3>Farm Advice Training and
           Workshops</h3>
+        <img src="/assets/images/workshopMobile.jpeg" alt="">
         <p>Experienced in arranging and delivering training and workshops on a range of topics.</p>
         <p>Recent events have included:</p>
         <ul>
