--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Normalise -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 
   <!-- Genrics -->
   <link rel="stylesheet" href="/styles/generics.css">
@@ -226,23 +226,30 @@
 
     <!-- Footer Starts Here -->
     <footer class="footer" id="footer">
-      <div class="social-links">
-        <ul>
 
+      <div class="social-links flex-center">
+
+      <div>
+        <ul class="flex-center">
           <li><a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></a></li>
 
           <li><a href="https://facebook.com"><i class="fa-brands fa-facebook-f"></i></a></li>
 
           <li><a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a></li>
-
         </ul>
+        
       </div>
 
-      <!-- Copyright -->
-      <div class="copyright">
+      <div class="copyright flex-center">
         <p>&copy; <span id="date"></span></p>
         <p>Skylark Farm Advice</p>
       </div>
+
+      </div>
+
+
+
+      
     </footer>
 
 
