updated picture assets for mobile - services section

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 
       <div class="services-card">
         <h3>Countryside Stewardship</h3>
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <img src="/assets/images/fieldTractorMobile.jpeg" alt="">
 
         <div class="stewardship-options">
           <div class="stewardship-title">
-            <h4 class="stewardship-heading">Pre-entry Countryside Stewardship Farm Review</h4>
+            <h4 class="stewardship-link">Pre-entry Countryside Stewardship Farm Review</h4>
             <h4 class="stewardship-btn">+</h4>
           </div>
           <p class="stewardship-description">An initial visit to your farm to discuss the Countryside
@@ -143,7 +143,7 @@
 
         <div class="stewardship-options">
           <div class="stewardship-title">
-            <h4 class="stewardship-heading">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+            <h4 class="stewardship-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
             <h4 class="stewardship-btn">+</h4>
           </div>
           <p class="stewardship-description">With over 10 years in undertaking successful
@@ -154,7 +154,7 @@
 
         <div class="stewardship-options">
           <div class="stewardship-title">
-            <h4 class="stewardship-heading"> Application Check </h4>
+            <h4 class="stewardship-link">Application Check </h4>
             <h4 class="stewardship-btn">+</h4>
           </div>
           <p class="stewardship-description">If you prefer to carry out your own application we provide an application
@@ -165,7 +165,7 @@
 
         <div class="stewardship-options">
           <div class="stewardship-title">
-            <h4 class="stewardship-heading">Stewardship Scheme MOT</h4>
+            <h4 class="stewardship-link">Stewardship Scheme MOT</h4>
             <h4 class="stewardship-btn">+</h4>
           </div>
           <p class="stewardship-description">Helping you to ensure you are meeting the requirements of your ELS, OELS,
@@ -177,7 +177,7 @@
 
       <div class="services-card">
         <h3>Access to support schemes</h3>
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <img src="/assets/images/lambsMobile.jpeg" alt="">
         <p>A wide variety of grants are now available to farmers in order to help support environmental management.</p>
 
         <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
@@ -192,7 +192,7 @@
 
       <div class="services-card">
         <h3>Soil Management</h3>
-        <img src="/assets/images/workshopMobile.jpeg" alt="">
+        <img src="/assets/images/soilManagementMobile.jpeg" alt="">
         <h4>Soil Management Plans</h4>
         <p>Provide advice on diffuse pollution and resource protection including the soil management requirements under
           Cross Compliance.</p>
