updated  tags - services sections

--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
       <div class="services-card">
         <h3>Access to support schemes</h3>
         <img src="/assets/images/lambsMobile.jpeg" alt="">
-        <p>A wide variety of grants are now available to farmers in order to help support environmental management.</p>
+        <p class="services-description">A wide variety of grants are now available to farmers in order to help support environmental management.</p>
 
-        <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
+        <p class="services-description">From Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected
           Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
 
-        <p>With over 10 years experience in undertaking successful agri-environment scheme applications as well
+        <p class="services-description">With over 10 years experience in undertaking successful agri-environment scheme applications as well
           as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes, Amanda
           can advise you on funding opportunities available, help you to decide what is right for your farm and assist
           from application to delivery.
@@ -193,8 +193,8 @@
       <div class="services-card">
         <h3>Soil Management</h3>
         <img src="/assets/images/soilManagementMobile.jpeg" alt="">
-        <h4>Soil Management Plans</h4>
-        <p>Provide advice on diffuse pollution and resource protection including the soil management requirements under
+        <!-- <h4>Soil Management Plans</h4> -->
+        <p class="services-description">Provide advice on diffuse pollution and resource protection including the soil management requirements under
           Cross Compliance.</p>
       </div>
 
@@ -202,7 +202,7 @@
         <h3>Farm Advice Training and
           Workshops</h3>
         <img src="/assets/images/workshopMobile.jpeg" alt="">
-        <p>Experienced in arranging and delivering training and workshops on a range of topics.</p>
+        <p class="services-description">Experienced in arranging and delivering training and workshops on a range of topics.</p>
         <p>Recent events have included:</p>
         <ul>
           <li>hedgerow management</li>
