updated hero img + services section for tablet+ screen size

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
       <div class="hero-main">
         <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg"
           alt="grain tractor harvesting wheat">
+        <img class="hero-image-desktop" src="/assets/images/grainTractorDesktop.jpeg"
+          alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
             <div>Independent Farm
