updated services desktop layout

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="hero-main">
         <img class="hero-image-mobile" src="/assets/images/grainTractorMobile.jpeg"
           alt="grain tractor harvesting wheat">
-        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.jpeg"
+        <img class="hero-image-desktop" src="/assets/images/sheepDesktop.avif"
           alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
@@ -129,7 +129,8 @@
 
       <div class="services-card">
         <h3>Countryside Stewardship</h3>
-        <img src="/assets/images/fieldTractorMobile.jpeg" alt="">
+        <img class="services-img-mobile" src="/assets/images/fieldTractorMobile.jpeg" alt="">
+        <img class="services-img-desktop" src="/assets/images/fieldTractorDesktop3.jpeg" alt="">
 
         <div class="stewardship-options">
           <div class="stewardship-title">
@@ -244,7 +245,7 @@
 
       <div class="copyright flex-center">
         <p>&copy; <span id="date"></span></p>
-        <p>Skylark Farm Advice</p>
+        <p> Skylark Farm Advice</p>
       </div>
 
       </div>
