updated page wrapper

--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
 
 <body>
 
-
-
-
   <div class="page-wrapper">
 
     <!-- Start Contact Banner -->
@@ -96,14 +93,14 @@
         <img class="hero-image-desktop" src="/assets/images/sheepDesktop.webp" alt="grain tractor harvesting wheat">
         <div class="hero-overlay">
           <div class="hero-title">
-          <div>Independent Farm</div>
-          <div>Advice Service</div>
+            <div>Independent Farm</div>
+            <div>Advice Service</div>
+          </div>
         </div>
+
       </div>
 
-       </div>
-
-  </div>
+ 
 
 
 
@@ -114,7 +111,7 @@
   <!-- About Section Starts Here -->
   <section class="about-wrapper" id="about">
     <h2 class="section-title">About Skylark</h2>
-    <p class="about-description">We specialise in working with farmers to <span class="text-highlight">maximise</span>
+    <p class="about-description">I specialise in working with farmers to <span class="text-highlight">maximise</span>
       the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
       business.</p>
 
@@ -122,11 +119,11 @@
       advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
       training and assurance schemes.</p>
 
-    <p>With over 15 years of providing farm advice in Hampshire and the surrounding areas, Amanda has a BSc in Ecology
-      and is a member of the Chartered Institute of Ecology and Environmental Management as well as holding
-      certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. She has
-      over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well as
-      delivery of independent grant schemes and partnership projects.</p>
+    <p>I have been providing farm advice for over 15 years in Hampshire and surrounding areas. I am a member of Chartered
+      Institute of Ecology and Environmental Management, with a a BSc in Ecology, as well as holding certificates in
+      BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management.
+      I have over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well
+      as delivery of independent grant schemes and partnership projects.</p>
 
   </section>
   <!-- About Section Ends Here -->
@@ -293,7 +290,6 @@
 
 
   </footer>
-
 
   </div>
 
