mobile contact number html tag updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <aside class="contact-banner">
       <div class="contact-wrapper flex-center">
         <h1>Got a question?</h1>
-        <h1> <a href="tel:+447305072073"></a>+44 73 05 07 2073</h1>
+        <h1> <a href="tel:+447305072073">+44 73 05 07 2073</a></h1>
       </div>
     </aside>
     <!-- End Contact Banner -->
@@ -344,7 +344,7 @@
 
             <li><a href="mailto:amanda@skylarkfarmadvice.co.uk"><i class="fa-solid fa-envelope icon"></i></a></li>
 
-            <li><a href="tel:07723474069"><i class="fa-solid fa-phone icon"></i></a></li>
+            <li><a href="tel:+447305072073"><i class="fa-solid fa-phone icon"></i></a></li>
           </ul>
 
         </div>
