--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
 
         <div class="copyright flex-center">
           <p>&copy; <span id="date"></span></p>
+          <p><a href="/privatepolicy.html">Private Policy</a></p>
           <p> Skylark Farm Advice</p>
         </div>
 
