Update the about text

--- a/index.html
+++ b/index.html
@@ -162,16 +162,9 @@
         the environmental potential of their land while <span class="text-highlight">supporting</span> the farm
         business.</p>
 
-      <p>I provide a range of services including countryside stewardship; habitat and species surveys, and
-        advice; compliance and greening guidance; soil management; meeting regulatory requirements, workshops and
-        training and assurance schemes.</p>
+      <p>I provide a range of services including Agri-environment scheme advice and applications (Countryside Stewardship, Sustainable Farming Incentive, Capital grants); habitat and species surveys and advice; soil management; meeting regulatory requirements; workshops; training and assurance schemes.</p>
 
-      <p>I have been providing farm advice for over 15 years in Hampshire and surrounding areas. I am a member of
-        Chartered
-        Institute of Ecology and Environmental Management, with a a BSc in Ecology, as well as holding certificates in
-        BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management.
-        I have over 10 years experience of working on agri-environment schemes including Countryside Stewardship as well
-        as delivery of independent grant schemes and partnership projects.</p>
+      <p>I have been providing farm advice for over 17 years in Hampshire and surrounding areas. I am a member of BASIS Environmental Advisers Register and a member of the Chartered Institute of Ecology and Environmental Management. I have BSc in Ecology, as well as holding certificates in BASIS Foundation in Agronomy, Soil and Water Management and Conservation Management. I have over 12 years experience of working on agri-environment schemes as well as delivery of independent grant schemes and partnership projects.</p>
 
     </section>
     <!-- About Section Ends Here -->
